# OKHS

./: .ok  ChangeLog.md  LICENSE  Makefile  OKHS.cabal  README.dhall  README.md  ReadmeExample.ok  Roadmap.md  stack.yaml  util
app/: CmdArgs.hs  Main.hs
src/: Prelude.hs
src/OKHS/: Configuration.hs  Lib.hs  Limitations.hs  Make.hs  Types.hs
