cabal-version: 1.12

name:           OKHS
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/OKHS#readme>
homepage:       https://github.com/githubuser/OKHS#readme
bug-reports:    https://github.com/githubuser/OKHS/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2019 Author name here
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/OKHS

library
  exposed-modules:
      OKHS.Lib
  other-modules:
      Paths_OKHS
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , language-bash == 0.8.0
    , brick
    , uniplate
    , vty
    , containers
    , flow
  default-language: Haskell2010

executable OKHS-exe
  main-is: Main.hs
  other-modules:
      Paths_OKHS
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -static
  build-depends:
      OKHS
    , base >=4.7 && <5
    , language-bash
    , brick
    , uniplate
    , vty
    , containers
    , typed-process
    , text
    , text-zipper
    , pretty-simple
    , flow
    , sqlite-simple
    , directory
  default-language: Haskell2010

test-suite OKHS-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_OKHS
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      OKHS
    , base >=4.7 && <5
    , language-bash == 0.8.0
    , brick
    , uniplate
    , vty
    , containers
  default-language: Haskell2010
